# ruyipack

./: .gitignore  Cargo.toml  README.md  USAGE.md  justfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/ruyi-core/: Cargo.toml
crates/ruyi-core/src/: repo.rs
crates/ruyi-io/: Cargo.toml
crates/ruyi-io/src/input/: mod.rs
crates/ruyi-io/src/input/targets/: json.rs  kcl.rs  stdin.rs
crates/ruyi-io/src/output/targets/: rpm_spec.rs
crates/ruyi-io/src/repo/: mod.rs
crates/ruyipack/: Cargo.toml
crates/ruyipack-core/: Cargo.toml
crates/ruyipack-core/src/: package.rs
crates/ruyipack-io/: Cargo.toml
crates/ruyipack-io/src/input/: mod.rs
crates/ruyipack-io/src/input/targets/: json.rs  kcl.rs  stdin.rs
crates/ruyipack-io/src/output/targets/: rpm_spec.rs
crates/ruyipack-io/src/repo/: kcl.rs  rpm_spec.rs
crates/ruyipack-io/templates/: rpm-template.spec
crates/ruyipack/src/: main.rs
kcl-land/: README.md
kcl-land/jade/: README.md
kcl-land/kcl-store/: kcl.mod
kcl-land/kcl-store/g/: graphviz.k
notes/: architecture.md
reports/: Research-on-KCL.md  sketch_of_ruyi_package.md
ruyi-handle-rs/: Cargo.toml
ruyi-handle-rs/src/: lib.rs
ruyi-handle-rs/src/input/: mod.rs
ruyi-handle-rs/src/input/targets/: json.rs  mod.rs
ruyi-handle-rs/src/output/targets/: rpm_spec.rs
ruyi-jade-k/: graphviz.k
